Initial commit: UI & API Automation project

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -1,39 +1,108 @@
-name: Test Runner
+name: Run UI & API Tests
 
 on:
   push:
     branches: [ "main" ]
-  schedule:
-    - cron: '30 7 * * *'
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  restAssured-API-test:
+  ui-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Git Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 23
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '23'
+          distribution: 'temurin'
+
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@v1.4.0
+        with:
+          chrome-version: latest
+          chrome-options: '--headless'
+
+      - name: Build Project
+        run: |
+          chmod +x gradlew
+          ./gradlew build
+
+      - name: Run UI Test with Extent Report
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          command: ./gradlew clean uiTest -Dbrowser=chrome -Dheadless=true
+
+      - name: Archive Extent Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: extent-report-ui
+          path: target/index.html
+
+      - name: Deploy Extent Report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          personal_token: ${{ secrets.PAT }}
+          publish_dir: target
+          destination_dir: ui-report
+
+  api-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 23
+        uses: actions/setup-java@v4
+        with:
+          java-version: '23'
           distribution: 'temurin'
 
       - name: Setup Gradlew
         run: chmod +x gradlew
 
-      - name: Load Environment Variables
-        run: |
-          echo "${{ secrets.ENV_FILE }}" > .env
-
-      - name: Execute API Test
-        run: ./gradlew clean apiTest
-
-      - name: Archive API test results
-        uses: actions/upload-artifact@v4.3.0
-        if: always()
+      - name: Run API Test with Allure
+        uses: nick-invision/retry@v2
         with:
-          name: api-test-report
-          path: build/reports/tests/apiTest
+          timeout_minutes: 10
+          max_attempts: 3
+          command: ./gradlew clean apiTest
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      # Generate Allure Report
+      - name: Install Allure CLI
+        run: |
+          npm install -g allure-commandline --save-dev
+
+      - name: Generate Allure Report
+        run: |
+          allure generate build/allure-results -o allure-report --clean
+
+      # Deploy Allure Report to GitHub Pages
+      - name: Deploy Allure Report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          personal_token: ${{ secrets.PAT }}
+          publish_dir: allure-report
+          destination_dir: allure-report
+
+      # Optional: Deploy Allure report (requires CLI or external job)
+      # You can add an allure serve step or deploy report if needed
