--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group = 'org.ananurbaiti'
@@ -32,6 +33,7 @@ dependencies {
 
     // JSON Parsing
     testImplementation("com.jayway.jsonpath:json-path:2.9.0")
+    implementation 'io.rest-assured:json-schema-validator:5.3.0'
 
     // Faker
     testImplementation("com.github.javafaker:javafaker:1.0.2")
@@ -42,17 +44,21 @@ dependencies {
     // TestNG
     testImplementation 'org.testng:testng:7.9.0'
 
+    // ✅ Allure for TestNG & Cucumber
+    testImplementation 'io.qameta.allure:allure-testng:2.25.0'
+    testImplementation 'io.qameta.allure:allure-cucumber7-jvm:2.25.0'
+
 }
 
 test {
     useTestNG()
 }
 
-tasks.register('webTest', Test) {
+tasks.register('uiTest', Test) {
     useTestNG {
-        includeGroups 'web'
+        includeGroups 'ui'
     }
-    include '**/web/runners/**'  // Only run BDD runners for web
+    include '**/ui/runners/**'  // Only run BDD runners for web
     testLogging.showStandardStreams = true
     outputs.upToDateWhen { false }
 
@@ -74,11 +80,27 @@ tasks.register('apiTest', Test) {
     useTestNG {
         includeGroups 'api'
     }
-    include '**/api/**'
-    testLogging.showStandardStreams = true
+    include '**/api/**/*.class'
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
     outputs.upToDateWhen { false }
     reports {
         html.required.set(true)
-        //junitXml.required.set(true)
     }
+}
+
+allure {
+    version="2.25.0"
+    autoconfigure(true)
+    aspectjweaver(true)
+
+    useTestNG {
+        version="2.25.0"
+    }
+}
+
+tasks.register('cleanAllureResults', Delete) {
+    delete file('build/allure-results')
 }
